Finalizando projeto tela de login
Capítulo 26 Aula 06

--- a/media-queries.css
+++ b/media-queries.css
@@ -8,6 +8,7 @@
 
     section#login {
         width: 90vw;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -26,7 +27,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 }
 
@@ -38,6 +39,7 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem {
